--- a/BobsBurgerRecipe.html
+++ b/BobsBurgerRecipe.html
@@ -6,25 +6,10 @@
     <meta name="author" content="Sam Aden">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bob's Beef Burger Recipe</title>
-    <link rel="stylesheet" href="survey.css">
-
-    <style>
-       html {
-    font-size: 26px;
-}
-
-/* Style the body */
-body {
-    background-color: #0f041d;
-    color: rgb(208, 214, 213);
-    font-family: "Times New Roman", serif; /* Corrected font declaration */
-}
-    </style>
+    <link rel="stylesheet" href="/HTML Projects/CSS/style.css">
 </head>
 <body>
     <header class="site-header">
-
-    <h1>Bob's Beef Burger Recipe</h1>
 
 <section>
     <nav aria-label="Main Navigation">
@@ -33,8 +18,7 @@ body {
             <li>
                 <a href="/">Home</a>
             </li>
-            <li>
-                <a href="aboutbobsburger.html">About Bob's Burgers</a>
+            <li><a href="/HTML Projects/about.html">About Bob's Burgers</a>Bob's Burgers</a>
             </li>
         </ul>
     </nav>
@@ -42,8 +26,8 @@ body {
 <main>
 <article class="recipe">
     <header class="recipe-header">
-        <h1>Bob's Beef Burger Recipe</h1>
-        <p class="recipe-description">Juicy Halal beef burger with simple spice mix and classic toppings.
+        <h1>Bob's Halal Beef Burger Recipe</h1>
+        <p class="recipe-description">Juicy Halal burger with simple spice mix and classic toppings.
         </p>
  </header>
 
@@ -53,40 +37,5 @@ body {
         <img src="img/bobsburger_5179x3453.jpg" alt="Recipe for Bob's Halal Beef Burger" title="Now that's a burger!" width="600" height="400">
         <figcaption>
             Bob's Famous Beef Burger freshly cooked
-        </figcaptsion>
+        </figcaption>
     </figure>
-
-<section class="recipe-section">
-<h2 id="Recipe">Here is the recipe</h2>
-<p>You wanna start off on the meat</p>
-<p>Preparing & Pre-seasoning. A good beef burger often is determined by the spice mix into the beef patty:</p>
-</section>
-<div class="preseasoning">
-
-    <h3>Ingredients</h3>
-<ul>
-    <li>1 tsp salt</li>
-    <li>1 tsp black pepper</li>
-    <li>1 tsp garlic powder</li>
-    <li>1 tsp onion powder</li>
-    <li>1 tsp smoked paprika</li>
-    <li>1/2 tsp cayenne pepper (optional for heat)</li>
-</ul>
-</div>
-</article>
-
-<section class="recipe-section">
-    <h2>Instructions</h2>
-    <ol>
-        <li>Mix the spices into the ground beef gently to avoid overworking the meat.</li>
-        <li>Divide the mixture into 4 equal portions and shape them into patties.</li>
-        <li>Preheat your grill or skillet to medium-high heat.</li>
-        <li>Make a slight indentation in the center of each patty.</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
-    </ol>
-</body>
-</html>
