Removed an extra stray anchor (a) element
I removed an extra </a> element. I had one too many.

--- a/BobsBurgerRecipe.html
+++ b/BobsBurgerRecipe.html
@@ -18,7 +18,7 @@
             <li>
                 <a href="/">Home</a>
             </li>
-            <li><a href="/HTML Projects/about.html">About Bob's Burgers</a>Bob's Burgers</a>
+            <li><a href="/HTML Projects/about.html">About Bob's Burgers
             </li>
         </ul>
     </nav>
