Fixed placement of main element, added recipe sections with ul & ol BobsBurgerRecipe.html

--- a/BobsBurgerRecipe.html
+++ b/BobsBurgerRecipe.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/HTML Projects/CSS/style.css">
 </head>
 <body>
+    <main>
     <header class="site-header">
 
 <section>
@@ -23,7 +24,6 @@
         </ul>
     </nav>
 
-<main>
 <article class="recipe">
     <header class="recipe-header">
         <h1>Bob's Halal Beef Burger Recipe</h1>
@@ -39,3 +39,41 @@
             Bob's Famous Beef Burger freshly cooked
         </figcaption>
     </figure>
+
+        <section class="recipe-section">
+<h2 id="Recipe">Here is the recipe</h2>
+<p>You wanna start off on the meat</p>
+<p>Preparing & Pre-seasoning. A good beef burger often is determined by the spice mix into the beef patty:</p>
+</section>
+<div class="preseasoning">
+
+    <h3 class="ingredients">ingredients</h3>
+<ul>
+    <li>1 tsp salt</li>
+    <li>1 tsp black pepper</li>
+    <li>1 tsp garlic powder</li>
+    <li>1 tsp onion powder</li>
+    <li>1 tsp smoked paprika</li>
+    <li>1/2 tsp cayenne pepper (optional for heat)</li>
+</ul>
+</div>
+</article>
+
+<section class="recipe-section">
+   <div class="ingredients"><h2>Instructions</h2></div>
+    <ol>
+        <li>Mix the spices into the ground beef gently to avoid overworking the meat.</li>
+        <li>Divide the mixture into 4 equal portions and shape them into patties.</li>
+        <li>Preheat your grill or skillet to medium-high heat.</li>
+        <li>Make a slight indentation in the center of each patty.</li>
+        <li>Cook the patties for about 4-5 minutes on each side.</li>
+        <li>Add cheese in the last minute of cooking if you like.</li>
+        <li>Toast the burger buns until lightly browned.</li>
+        <li>Assemble with lettuce, tomato, onions, pickles, and sauces.</li>
+    </ol>
+</section>
+</main>
+
+</body>
+</html>
+        
