--- a/HTML Projects/index.html
+++ b/HTML Projects/index.html
@@ -75,8 +75,9 @@
         <li>Assemble with lettuce, tomato, onions, pickles, and sauces.</li>
     </ol>
 </section>
+<button onclick="scrollToTop()" class="back-to-top" title="Scroll Back to Top"> 
 </article>
 </main>
-
+    
 </body>
 </html>
