Add footer with copyright details
Added footer section with copyright information.

--- a/HTML Projects/index.html
+++ b/HTML Projects/index.html
@@ -78,6 +78,12 @@
 <button onclick="scrollToTop()" class="back-to-top" title="Scroll Back to Top"> 
 </article>
 </main>
-    
+
+<footer>
+    <p>
+        Copyright &copy; | Bob's Burgers | All rights reserved 
+    </p>
+</footer>
 </body>
 </html>
+
